--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,13 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "fzaninotto/faker": "^1.6",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "tymon/jwt-auth": "^0.5.9",
-        "laravelcollective/html": "~5.0"
+        "laravelcollective/html": "~5.0",
+        "tymon/jwt-auth": "^0.5.9"
     },
     "require-dev": {
-        "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.7"
     },
